--- a/index.css
+++ b/index.css
@@ -37,8 +37,7 @@
     gap: 17px;
     text-align: center;
     font-size: 250px;
-    font-family: swis721-blk-bt;
-
+    font-family: var(--font-swis721-blkex-bt);
   }
   .emanuel-berdugo-parent {
     position: absolute;
